apps/plant-it/plant-it.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plant-it
  namespace: server
  labels:
    app.kubernetes.io/name: plant-it
    app.kubernetes.io/component: app
    app.kubernetes.io/part-of: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: plant-it
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plant-it
        app.kubernetes.io/component: app
        app.kubernetes.io/part-of: server
    spec:
      containers:
        - name: plant-it
          image: ghcr.io/mdeluise/plant-it-server:0.10.0
          ports:
            - name: frontend
              containerPort: 3000
            - name: api
              containerPort: 8080
          volumeMounts:
            - name: plant-it-data
              mountPath: /upload-dir
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /api/info/ping
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/info/ping
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
      volumes:
        - name: plant-it-data
          persistentVolumeClaim:
            claimName: plant-it-data
---
apiVersion: v1
kind: Service
metadata:
  name: plant-it
  namespace: server
  labels:
    app.kubernetes.io/name: plant-it
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: plant-it
  ports:
    - name: frontend
      port: 3000
      targetPort: 3000
    - name: api
      port: 8080
      targetPort: 8080
